# Rust-Backtester

./: Cargo.toml  LICENSE  README.md
benches/: indicator_benchmark.rs
src/: 2018-09-01-2024-Bitfinex_Spot-4h.csv  lib.rs  main.rs
src/data/: 2018-09-01-2024-Bitfinex_Spot-4h.csv  convert.py
src/indicators/: T3.rs  acosc.rs  ad.rs  adosc.rs  adx.rs  adxr.rs  alligator.rs  alma.rs  ao.rs  apo.rs  aroon.rs  aroonosc.rs  atr.rs  avgprice.rs  bandpass.rs  data_loader.rs  dema.rs  ema.rs  fwma.rs  highpass.rs  hma.rs  kama.rs  linearreg.rs  mama.rs  mod.rs  rsi.rs  sma.rs  tema.rs  trima.rs  wilders.rs  wma.rs  zlema.rs
src/utilities/: math_functions.rs
